--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -19,8 +19,9 @@
             {{#bill}}method="POST" action="/bill/{{bill_id}}"{{/bill}}
             {{^bill}}method="POST" action="/bill"{{/bill}}>
         <div class="btn-group">
-          <input type="submit" class="btn btn-success" value="Tallenna">
-          <a class="btn btn-warning" href="/{{#bill}}bill/{{bill_id}}{{/bill}}">Peruuta</a>
+          <input type="submit" class="btn btn-lg btn-success" value="Tallenna">
+          <a class="btn btn-lg btn-warning" href="/{{#bill}}bill/{{bill_id}}{{/bill}}">Peruuta</a>
+          <a class="btn btn-lg btn-info" href="/">Takaisin</a>
         </div>
         <table class="table table-striped">
           <tr>
