--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -67,7 +67,7 @@
 	      </tr>
 	      {{#bills}}
 	      <tr class="clickable-row {{#tags}}tag{{tag_index}} {{/tags}}" data-href="/bill/{{bill_id}}" style="cursor: pointer">
-	        <td><a class="btn btn-default" href="/bill/{{bill_id}}">#{{bill_id}}</a></td>
+	        <td><a class="btn btn-default" href="/bill/{{bill_id}}">{{bill_id}}</a></td>
 	        <td>{{paid_date}}</td>
 	        <td class="text-right">{{amount}}</td>
 	        {{#admin}}
