Update instructions for taking image

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -169,10 +169,18 @@
       </form>
       <div id="bill-image-container"></div>
       <div id="bill-image-placeholder" class="well">
-        Valitse kameralla, skannerilla tai <a target="_blank"
-                                              href="https://www.take-a-screenshot.org/">ruudunkaappauksella</a>
-        otettu kuva laskusta tai kuitista. Tuetut tiedostomuodot ovat JPEG ja
-        PNG.
+        <ul>
+          <li>Valitse kameralla, skannerilla tai <a target="_blank"
+                                                    href="https://www.take-a-screenshot.org/">ruudunkaappauksella</a>
+            otettu kuva laskusta tai kuitista. Tuetut tiedostomuodot ovat JPEG ja
+            PNG.</li>
+          <li>Kuvasta täytyy näkyä <b>päivämäärä</b> ja <b>summa</b>. Kuittia saa täydentää käsin kirjoittamalla.</li>
+          <li>Valokuvaamiseen suositellaan salamaa.</li>
+          <li>Useampi kuva täytyy yhdistää yhdeksi. Androidille
+            suositellaan <a target="_blank"
+                            href="https://play.google.com/store/apps/details?id=com.zombodroid.imagecombinerfree">Image
+              Combiner -sovellusta</a>.</li>
+        </ul>
       </div>
       <script src="/static/js/jquery.min.js"></script>
       <script src="/static/js/bootstrap.min.js"></script>
