Show Finnish dates in bills list
Instead of the ISO dates we use internally

--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -68,7 +68,7 @@
 	      {{#bills}}
 	      <tr class="clickable-row {{#tags}}tag{{tag_index}} {{/tags}}" data-href="/bill/{{bill_id}}" style="cursor: pointer">
 	        <td><a class="btn btn-default" href="/bill/{{bill_id}}">{{bill_id}}</a></td>
-	        <td>{{paid_date}}</td>
+	        <td>{{paid_date_fi}}</td>
 	        <td class="text-right">{{amount}}</td>
 	        {{#admin}}
 	        <td>{{paid_user_full_name}}</td>
