Allow admin to input euro amount per bill
No proper error checking, so it's admin-only for now.

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -80,6 +80,13 @@
           </tr>
           {{#admin}}
           <tr>
+            <th>Summa:</th>
+            <td>
+              <input type="text" name="amount"
+                     value="{{#bill}}{{amount}}{{/bill}}"> &euro;
+            </td>
+          </tr>
+          <tr>
             <th>Tili kirjanpidossa:</th>
             <td>
               <select name="account">
