--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -74,7 +74,13 @@
 	        <td>{{paid_user_full_name}}</td>
 	        {{/admin}}
 	        <td>{{description}}</td>
-	        <td>{{#tags}}#{{tag}} {{/tags}}</td>
+	        <td>
+            {{#tags}}#{{tag}} {{/tags}}
+            {{#image_missing}}
+            <span class="glyphicon glyphicon-paperclip"
+                  title="Kuva puuttuu"></span>
+            {{/image_missing}}
+          </td>
 	      </tr>
 	      {{/bills}}
       </table>
