Fix list of bookkeeping accounts
Now it's properly sorted, with sane-looking titles. (Well, as sane as
bookkeeping stuff can look to a layperson ;-)

Also worked on the fledgling account list in the reports section.

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -91,7 +91,7 @@
             <td>
               <select name="account">
                 {{#accounts}}
-                <option value="{{account_id}}">{{account_title}}</option>
+                <option value="{{account_id}}">{{prefix}} {{title}}</option>
                 {{/accounts}}
               </select>
             </td>
