Putq full end-of-year financial statement in one zip file

--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -25,7 +25,7 @@
             <li><a href="/report/chart-of-accounts">Tilikartta</a></li>
             <li><a href="#">Tuloslaskelma tilierittelyin</a></li>
             <li><a href="/report/massikone.ofx">Tiliote OFX-tiedostona</a></li>
-            <li><a href="/report/massikone.zip">Kuittien kuvat zip-tiedostona</a></li>
+            <li><a href="/report/massikone.zip">Tilinpäätös zip-tiedostona</a></li>
           </ul>
         </div>
         {{/admin}}
