Add General Journal to reports
Very rough draft

--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -18,7 +18,7 @@
         <div class="btn-group">
           <button class="btn btn-info btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Raportit <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="#">Päiväkirja</a></li>
+            <li><a href="/report/general-journal">Päiväkirja</a></li>
             <li><a href="#">Pääkirja</a></li>
             <li><a href="#">Tase</a></li>
             <li><a href="#">Tase erittelyin</a></li>
