Get rid of resolve_user

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -36,7 +36,7 @@
               </select>
               {{/admin}}
               {{^admin}}
-              {{#bill}}{{paid_user.full_name}}{{/bill}}
+              {{#bill}}{{paid_user_full_name}}{{/bill}}
               {{^bill}}{{current_user.full_name}}{{/bill}}
               {{/admin}}
             </td>
