--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-select.min.css">
     <title>{{app_title}}</title>
   </head>
   <body>
@@ -93,7 +94,7 @@
                 <tr>
                   <th>Credit (tililtä):</th>
                   <td>
-                    <select name="credit_account_id">
+                    <select class="selectpicker" data-width="auto" data-live-search="true" name="credit_account_id">
                       <option value=""></option>
                       {{#credit_accounts}}
                       <option value="{{account_id}}" {{#selected}}selected{{/selected}}>{{prefix}} {{title}}</option>
@@ -104,7 +105,7 @@
                 <tr>
                   <th>Debet (tilille):</th>
                   <td>
-                    <select name="debit_account_id">
+                    <select class="selectpicker" data-width="auto" data-live-search="true" name="debit_account_id">
                       <option value=""></option>
                       {{#debit_accounts}}
                       <option value="{{account_id}}" {{#selected}}selected{{/selected}}>{{prefix}} {{title}}</option>
@@ -179,6 +180,8 @@
       <script src="/static/js/bootstrap.min.js"></script>
       <script src="/static/js/bootstrap-datepicker.min.js"></script>
       <script src="/static/js/bootstrap-datepicker.fi.min.js"></script>
+      <script src="/static/js/bootstrap-select.min.js"></script>
+      <script src="/static/js/bootstrap-select.fi.min.js"></script>
       <script src="/static/js/jq-ajax-progress.min.js"></script>
       <script src="/static/js/bill.js"></script>
     </div>
