Let only admin fill in paid date

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -64,6 +64,7 @@
               {{/admin}}
             </td>
           </tr>
+          {{#admin}}
           <tr>
             <th>Maksupvm:</th>
             <td>
@@ -73,6 +74,7 @@
                      value="{{#bill}}{{paid_date_fi}}{{/bill}}">
             </td>
           </tr>
+          {{/admin}}
           <tr>
             <th>Tägit:</th>
             <td>
