Add 'mark paid' button

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -133,6 +133,7 @@
           <tr>
             <th>Tila:</th>
             <td>
+              <button type="button" class="btn btn-success">Merkkaa maksetuksi</button>
               <button type="button" class="btn btn-danger">Poista</button>
             </td>
           </tr>
