Spell Maksupvm -> Maksupäivä
The online banking service says 'Maksupäivä', so use the same word.

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -66,7 +66,7 @@
           </tr>
           {{#admin}}
           <tr>
-            <th>Maksupvm:</th>
+            <th>Maksupäivä:</th>
             <td>
               <input type="text" class="datepicker"
                      data-provide="datepicker" data-date-language="fi"
