--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -26,6 +26,8 @@
             <li><a href="#">Tuloslaskelma tilierittelyin</a></li>
             <li><a href="/report/massikone.ofx">Tiliote OFX-tiedostona</a></li>
             <li><a href="/report/massikone.zip">Tilinpäätös zip-tiedostona</a></li>
+            <li class="divider"></li>
+            <li><a href="/compare">Vertaa tiliotteeseen&hellip;</a></li>
           </ul>
         </div>
         {{/admin}}
