Remove instructions from templates

--- a/views/bill.mustache
+++ b/views/bill.mustache
@@ -154,25 +154,11 @@
       </div>
       <div id="bill-image-placeholder" class="well">
         <ul>
-          <li>Valitse kameralla, skannerilla tai <a target="_blank"
-                                                    href="https://www.take-a-screenshot.org/">ruudunkaappauksella</a>
-            otettu kuva laskusta tai kuitista. Tuetut tiedostomuodot ovat JPEG ja
-            PNG.</li>
-          <li>Kuvasta täytyy näkyä <b>päivämäärä</b> ja <b>summa</b>. Kuittia saa täydentää käsin kirjoittamalla.</li>
+          <li>Valitse kuva laskusta tai kuitista.
+          <li>Kuvasta täytyy näkyä <b>päivämäärä</b> ja <b>summa</b>. Kuittia saa täydentää kirjoittamalla.</li>
           <li>
-            Tapahtuma dokumentoidaan sellaisella tarkkuudella, että lukija,
-            joka ei tapahtumasta etukäteen tiedä mitään, saa tositetta
-            lukemalla selville olennaiset asiat: milloin tapahtuma sattui,
-            ketkä olivat osallisia, mitä myytiin tai ostettiin tms, ja miten
-            tapahtuma liittyi yhdistyksen toimintaan. Tositteeseen pitää
-            dokumentoida myös tapahtuman
-            raha-arvo. <a href="http://antti-juhani.kaijanaho.fi/newblog/archives/791">[Lähde]</a>.
+            Tuetut tiedostomuodot ovat JPEG, PNG ja GIF.</li>
           </li>
-          <li>Valokuvaamiseen suositellaan salamaa.</li>
-          <li>Useampi kuva täytyy yhdistää yhdeksi. Androidille
-            suositellaan <a target="_blank"
-                            href="https://play.google.com/store/apps/details?id=com.zombodroid.imagecombinerfree">Image
-              Combiner -sovellusta</a>.</li>
         </ul>
       </div>
       <script src="/static/js/jquery.min.js"></script>
