Work on new reports

--- a/views/bills.mustache
+++ b/views/bills.mustache
@@ -18,12 +18,12 @@
         <div class="btn-group">
           <button class="btn btn-info btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Raportit <span class="caret"></span></button>
           <ul class="dropdown-menu">
-            <li><a href="#">Tuloslaskelma</a></li>
-            <li><a href="#">Tuloslaskelma erittelyin</a></li>
-            <li><a href="#">Tase</a></li>
-            <li><a href="#">Tase erittelyin</a></li>
+            <li><a href="/report/income-statement">Tuloslaskelma</a></li>
+            <li><a href="/report/income-statement-detailed">Tuloslaskelma erittelyin</a></li>
+            <li><a href="/report/balance-sheet">Tase</a></li>
+            <li><a href="/report/balance-sheet-detailed">Tase erittelyin</a></li>
             <li><a href="/report/general-journal">Päiväkirja</a></li>
-            <li><a href="#">Pääkirja</a></li>
+            <li><a href="/report/general-ledger">Pääkirja</a></li>
             <li><a href="/report/chart-of-accounts">Tilikartta</a></li>
             <li class="divider"></li>
             <li><a href="/report/massikone.zip">Kaikki zip-tiedostona&hellip;</a></li>
