--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -13,7 +13,7 @@
       <h1>{{AppTitle}}</h1>
       <h2>{{current_user.full_name}}</h2>
       <div class="btn-group" role="group" aria-label="Basic example">
-        <a class="btn btn-info btn-lg" href="/bill">Uusi lasku</a>
+        <a class="btn btn-info btn-lg" href="/bill">Uusi tosite</a>
         {{#CurrentUser.IsAdmin}}
         <div class="btn-group">
           <button class="btn btn-info btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Raportit <span class="caret"></span></button>
@@ -38,7 +38,7 @@
       </div>
       <form id="logout-form" method="POST" action="/logout" style="display: none"></form>
       {{^Bills}}
-      <p>Ei laskuja</p>
+      <p>Ei tositteita</p>
       {{/Bills}}
       {{#Bills}}
       <h2>Kulut</h2>
