Add settings page

--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -31,6 +31,7 @@
             <li><a href="/vertaa">Vertaa tiliotteeseen&hellip;</a></li>
           </ul>
         </div>
+        <a class="btn btn-info btn-lg" href="/asetukset">Asetukset</a>
         {{/CurrentUser.IsAdmin}}
         {{#IsPublic}}
         <button type="button" class="btn btn-info btn-lg" id="logout-button">Kirjaudu ulos</button>
