--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>{{AppTitle}}</h1>
-      <h2>{{current_user.full_name}}</h2>
+      <h2>{{CurrentUser.FullName}}</h2>
       <div class="btn-group" role="group" aria-label="Basic example">
         <a class="btn btn-info btn-lg" href="/tosite">Uusi tosite</a>
         {{#CurrentUser.IsAdmin}}
