--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>{{AppTitle}}</h1>
-      <h2>{{current_user.full_name}}</h2>
+      <h2>{{CurrentUser.FullName}}</h2>
       <h2>Vertaa tiliotteeseen</h2>
       <p>Lataa verkkopankista saamasi tiliotteet tälle sivulle. Näet, mille
         tilitapahtumille ei ole vastaavaa merkintää Massikoneessa.</p>
