Change user levels

--- a/templates/settings.mustache
+++ b/templates/settings.mustache
@@ -49,9 +49,10 @@
               <td>{{FullName}}</td>
               <td>
                 <select name="{{UserId}}">
-                  <option value="0">Vain omat</option>
-                  <option value="1">Selata kaikkea</option>
-                  <option value="2">Muokata kaikkea</option>
+                  <option value="0">Deaktivoitu</option>
+                  <option value="1">Vain omat</option>
+                  <option value="2">Selata kaikkea</option>
+                  <option value="3">Muokata kaikkea</option>
                 </select>
               </td>
             </tr>
