Highlight today in date picker calendar

--- a/templates/bill.mustache
+++ b/templates/bill.mustache
@@ -69,7 +69,9 @@
               <th>Maksupäivä:</th>
               <td>
                 <input type="text" class="datepicker"
-                       data-provide="datepicker" data-date-language="fi"
+                       data-provide="datepicker"
+                       data-date-language="fi"
+                       data-date-today-highlight="true"
                        name="paid_date_fi"
                        value="{{#Bill}}{{PaidDateFi}}{{/Bill}}">
               </td>
