--- a/templates/settings.mustache
+++ b/templates/settings.mustache
@@ -13,9 +13,9 @@
       <h1>{{AppTitle}}</h1>
       <h2>{{CurrentUser.FullName}}</h2>
       <div class="btn-group">
-        <a class="btn btn-lg btn-warning" href="/">Peruuta</a>
+        <a class="btn btn-lg btn-warning" href="/">Takaisin</a>
       </div>
-      <h2>Yhdistyksen tiedot</h2>
+      <h2>Yhdistyksen nimi</h2>
       <form enctype="multipart/form-data" method="POST" action="/api/settings">
         <table class="table table-striped table-hover">
           <tr>
@@ -35,7 +35,7 @@
             </td>
           </tr>
         </table>
-        <input type="submit" class="btn btn-lg btn-success" value="Tallenna" />
+        <input type="submit" class="btn btn-lg btn-success" value="Tallenna nimet" />
       </form>
       <h2>Käyttäjien oikeudet</h2>
       <form enctype="multipart/form-data" method="POST" action="/api/permissions">
@@ -58,6 +58,7 @@
             </tr>
           {{/Users}}
         </table>
+        <input type="submit" class="btn btn-lg btn-success" value="Tallenna oikeudet" />
       </form>
     </div>
     <script src="/static/js/jquery.min.js"></script>
