Fix table styling on compare page

--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -20,7 +20,19 @@
           <a class="btn btn-warning" href="/">Takaisin</a>
         </div>
       </form>
-      <table id="entries" class="table"></table>
+      <h2>Tulokset</h2>
+      <table class="table table-bordered table-striped" id="entries">
+        <thead>
+          <tr>
+            <th>Pvm</th>
+            <th>&euro;</th>
+            <th>Missä</th>
+            <th>Kuvaus</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
       <div class="alert alert-warning">
         <strong>Tietoturva:</strong> Tiliotteen
         käsittely tapahtuu kokonaan selaimessasi - tilitietoja ei ladata
