--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -44,33 +44,37 @@
       {{#Bills}}
         <h2>Kulut</h2>
         <table class="table table-striped table-hover">
-          <tr>
-            <th>Kulu</th>
-            <th class="text-right">Pvm</th>
-            <th class="text-right">&euro;</th>
-            {{#CurrentUser.IsAdmin}}
-              <th>Maksaja</th>
-            {{/CurrentUser.IsAdmin}}
-            <th>Kuvaus</th>
-            <th></th>
-          </tr>
-          {{#Bills}}
-            <tr class="clickable-row" data-href="/tosite/{{BillID}}" style="cursor: pointer">
-              <td><a class="btn btn-default" href="/tosite/{{BillID}}">{{BillID}}</a></td>
-              <td class="text-right">{{PaidDateFi}}</td>
-              <td class="text-right">{{Amount}}</td>
+          <thead>
+            <tr>
+              <th>Kulu</th>
+              <th class="text-right">Pvm</th>
+              <th class="text-right">&euro;</th>
               {{#CurrentUser.IsAdmin}}
-                <td>{{PaidUser.FullName}}</td>
+              <th>Maksaja</th>
               {{/CurrentUser.IsAdmin}}
-              <td>{{Description}}</td>
-              <td>
-                {{#image_missing}}
-                  <span class="glyphicon glyphicon-paperclip"
-                        title="Kuva puuttuu"></span>
-                {{/image_missing}}
-              </td>
+              <th>Kuvaus</th>
+              <th></th>
             </tr>
-          {{/Bills}}
+          </thead>
+          <tbody>
+            {{#Bills}}
+              <tr class="clickable-row" data-href="/tosite/{{BillID}}" style="cursor: pointer">
+                <td><a class="btn btn-default" href="/tosite/{{BillID}}">{{BillID}}</a></td>
+                <td class="text-right">{{PaidDateFi}}</td>
+                <td class="text-right">{{Amount}}</td>
+                {{#CurrentUser.IsAdmin}}
+                  <td>{{PaidUser.FullName}}</td>
+                {{/CurrentUser.IsAdmin}}
+                <td>{{Description}}</td>
+                <td>
+                  {{#image_missing}}
+                    <span class="glyphicon glyphicon-paperclip"
+                          title="Kuva puuttuu"></span>
+                  {{/image_missing}}
+                </td>
+              </tr>
+            {{/Bills}}
+          </tbody>
         </table>
       {{/Bills}}
     </div>
