Right-align table headers on comparison page

--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -24,8 +24,8 @@
       <table class="table table-bordered table-striped" id="entries">
         <thead>
           <tr>
-            <th>Pvm</th>
-            <th>&euro;</th>
+            <th class="text-right">Pvm</th>
+            <th class="text-right">&euro;</th>
             <th>Missä</th>
             <th>Kuvaus</th>
           </tr>
