--- a/templates/bills.mustache
+++ b/templates/bills.mustache
@@ -33,6 +33,7 @@
           </div>
           <a class="btn btn-info btn-lg" href="/asetukset">Asetukset</a>
         {{/CurrentUser.IsAdmin}}
+        <a class="btn btn-info btn-lg" href="/tietoja">Tietoja</a>
         {{#IsPublic}}
           <button type="button" class="btn btn-info btn-lg" id="logout-button">Kirjaudu ulos</button>
         {{/IsPublic}}
