--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -15,6 +15,7 @@
         <div>{{message}}</div>
       {{/message}}
       <a class="btn btn-info" href="/auth/gplus">Sisään Google-tunnuksella</a>
+      <a class="btn btn-info" href="/tietoja">Tietoja</a>
       <script src="/static/js/jquery.min.js"></script>
       <script src="/static/js/bootstrap.min.js"></script>
     </div>
