Switch goth auth provider from gplus to google

--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -14,7 +14,7 @@
       {{#message}}
         <div>{{message}}</div>
       {{/message}}
-      <a class="btn btn-info" href="/auth/gplus">Sisään Google-tunnuksella</a>
+      <a class="btn btn-info" href="/auth/google">Sisään Google-tunnuksella</a>
       <a class="btn btn-info" href="/tietoja">Tietoja</a>
     </div>
     <script src="/static/js/jquery.min.js"></script>
